<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.globalmentor</groupId>
		<artifactId>globalmentor-root</artifactId>
		<version>3.0.3-SNAPSHOT</version>
		<relativePath />
	</parent>

	<groupId>io.guise</groupId>
	<artifactId>guise-mummy-bom</artifactId>
	<version>0.6.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Guise Mummy BOM</name>
	<description>Guise™ Mummy static site generator aggregate parent POM and bill of materials.</description>
	<url>https://guise.io/mummy/</url>
	<inceptionYear>2019</inceptionYear>

	<organization>
		<name>GlobalMentor, Inc.</name>
		<url>https://www.globalmentor.com/</url>
	</organization>

	<developers>
		<developer>
			<name>Garret Wilson</name>
			<email>garret@globalmentor.com</email>
			<organization>GlobalMentor, Inc.</organization>
			<organizationUrl>https://www.globalmentor.com/</organizationUrl>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:https://bitbucket.org/globalmentor/guise-mummy.git</connection>
		<developerConnection>scm:git:https://bitbucket.org/globalmentor/guise-mummy.git</developerConnection>
		<url>https://bitbucket.org/globalmentor/guise-mummy</url>
	</scm>

	<properties>
		<maven.compiler.release>25</maven.compiler.release>
	</properties>

	<modules>
		<module>cli</module>
		<module>mesh</module>
		<module>mummy</module>
		<module>tomcat</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.drewnoakes</groupId>
				<artifactId>metadata-extractor</artifactId>
				<version>2.16.0</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-application</artifactId>
				<version>0.7.9</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-awt</artifactId>
				<version>0.6.1</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-base</artifactId>
				<version>0.21.1-SNAPSHOT</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-web-bom</artifactId>
				<version>0.17.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.vladsch.flexmark</groupId>
				<artifactId>flexmark-all</artifactId>
				<version>0.64.0</version>
			</dependency>

			<dependency>
				<groupId>io.clogr</groupId>
				<artifactId>clogr-bom</artifactId>
				<version>0.9.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>io.confound</groupId>
				<artifactId>confound-bom</artifactId>
				<version>0.8.0-SNAPSHOT</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>io.guise</groupId>
				<artifactId>guise-cli</artifactId>
				<version>0.6.0-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>io.guise</groupId>
				<artifactId>guise-mesh</artifactId>
				<version>0.6.0-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>io.guise</groupId>
				<artifactId>guise-mummy</artifactId>
				<version>0.6.0-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>io.guise</groupId>
				<artifactId>guise-tomcat</artifactId>
				<version>0.6.0-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>io.urf</groupId>
				<artifactId>urf-bom</artifactId>
				<version>0.5.0-SNAPSHOT</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.snakeyaml</groupId>
				<artifactId>snakeyaml-engine</artifactId>
				<version>2.5</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-imaging</artifactId>
				<version>1.0-alpha2</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-jexl3</artifactId>
				<version>3.1</version>
			</dependency>

			<dependency>
				<groupId>org.apache.tomcat.embed</groupId>
				<artifactId>tomcat-embed-core</artifactId>
				<version>10.1.4</version>
			</dependency>

			<dependency>
				<groupId>biz.aQute.bnd</groupId>
				<artifactId>biz.aQute.bnd.annotation</artifactId>
				<version>6.3.1</version>
			</dependency>

			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>osgi.annotation</artifactId>
				<version>8.1.0</version>
			</dependency>

			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>bom</artifactId>
				<version>2.20.78</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
